Added Modal to Homepage, Minor fixes

--- a/blog-grid.html
+++ b/blog-grid.html
@@ -6,11 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Bucket | Creative Media Agency</title>
-  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <!--- End favicon-->
 
-  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Familjen+Grotesk:wght@600;700&family=Inter:wght@400;600&family=Libre+Baskerville:wght@700&family=Syne:wght@600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Familjen+Grotesk:wght@600;700&family=Inter:wght@400;600&family=Libre+Baskerville:wght@700&family=Syne:wght@600;700&display=swap"
+    rel="stylesheet">
   <!-- End google font  -->
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,6 +35,16 @@
 
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/app.min.css">
+  <style>
+    .footerImage {
+      width: 25%;
+
+      @media (min-width: 200px) and (max-width: 767px) {
+        width: 50%;
+      }
+
+    }
+  </style>
 </head>
 
 <body class="light">
@@ -49,7 +67,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="index.html">
-            <img src="assets/images/logo/logo-white.svg" alt="" class="light-version-logo">
+            <img src="assets/logo_tb.png" alt="" class="light-version-logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
@@ -311,7 +329,8 @@
                       ive high-income skills to build your business
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -334,7 +353,8 @@
                       I run a $10,000/month business use AI tools
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -357,7 +377,8 @@
                       Different types loan and how to deal with
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -380,7 +401,8 @@
                       Business analytics is a practice essential
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -403,7 +425,8 @@
                       A person business with fun and success
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -426,7 +449,8 @@
                       Three guys have me for a seat in business
                     </h3>
                   </a>
-                  <a class="post-read-more" href="single-blog.html">read more <img src="assets/images/icon/arrow-right.svg" alt=""></a>
+                  <a class="post-read-more" href="single-blog.html">read more <img
+                      src="assets/images/icon/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -535,14 +559,15 @@
             <div class="aximo-default-content light position-relative">
               <h2>
                 <span class="aximo-title-animation">
-                  Let's start a 
+                  Let's start a
                   <span class="aximo-title-icon">
                     <img src="assets/images/v1/star2.png" alt="">
                   </span>
                 </span>
                 project together
               </h2>
-              <p>We work closely with our clients to understand their objectives, target audience, and unique needs. We use our creative skills to translate these requirements and practical design solutions.</p>
+              <p>We work closely with our clients to understand their objectives, target audience, and unique needs. We
+                use our creative skills to translate these requirements and practical design solutions.</p>
               <div class="aximo-info-wrap">
                 <div class="aximo-info">
                   <ul>
@@ -602,7 +627,8 @@
                 <div class="aximo-form-field">
                   <textarea name="textarea" placeholder="Write your message here..."></textarea>
                 </div>
-                <button id="aximo-submit-btn" type="submit">Send message <span><img src="assets/images/icon/arrow-right3.svg" alt=""></span></button>
+                <button id="aximo-submit-btn" type="submit">Send message <span><img
+                      src="assets/images/icon/arrow-right3.svg" alt=""></span></button>
               </form>
             </div>
           </div>
@@ -613,20 +639,20 @@
           <div class="col-lg-6">
             <div class="aximo-footer-logo">
               <a href="">
-                <img src="assets/images/logo/logo-white.svg" alt="">
+                <img class="footerImage" src="assets/logo_tb.png"" alt="">
               </a>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="aximo-copywright one">
-              <p> &copy; Copyright 2023, All Rights Reserved by Mthemeus</p>
+          <div class=" col-lg-6">
+                <div class="aximo-copywright one">
+                  <p> &copy; Copyright 2023, All Rights Reserved by Mthemeus</p>
+                </div>
             </div>
           </div>
+
         </div>
 
       </div>
-
-    </div>
   </footer>
 
 
@@ -656,4 +682,5 @@
 
 
 </body>
+
 </html>
