--- a/pricing.html
+++ b/pricing.html
@@ -7,11 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Bucket | Creative Media Agency</title>
 
-  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <!--- End favicon-->
 
-  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Familjen+Grotesk:wght@600;700&family=Inter:wght@400;600&family=Libre+Baskerville:wght@700&family=Syne:wght@600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Familjen+Grotesk:wght@600;700&family=Inter:wght@400;600&family=Libre+Baskerville:wght@700&family=Syne:wght@600;700&display=swap"
+    rel="stylesheet">
   <!-- End google font  -->
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -28,6 +35,16 @@
 
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/app.min.css">
+  <style>
+    .footerImage {
+      width: 25%;
+
+      @media (min-width: 200px) and (max-width: 767px) {
+        width: 50%;
+      }
+
+    }
+  </style>
 </head>
 
 <body class="light">
@@ -50,7 +67,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="index.html">
-            <img src="assets/images/logo/logo-white.svg" alt="" class="light-version-logo">
+            <img src="assets/logo_tb.png" alt="" class="light-version-logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
@@ -294,17 +311,18 @@
         <h2>
           Pick from one of our
           <span class="aximo-title-animation">
-          ready packages
-          <span class="aximo-title-icon">
-            <img src="assets/images/v1/star2.png" alt="">
-          </span>
+            ready packages
+            <span class="aximo-title-icon">
+              <img src="assets/images/v1/star2.png" alt="">
+            </span>
           </span>
         </h2>
       </div>
       <div class="pricing-btn">
         <label>Billed monthly</label>
         <div class="toggle-btn">
-          <input class="form-check-input btn-toggle price-deck-trigger" type="checkbox" id="flexSwitchCheckDefault" data-pricing-trigger data-target="#table-price-value" checked>
+          <input class="form-check-input btn-toggle price-deck-trigger" type="checkbox" id="flexSwitchCheckDefault"
+            data-pricing-trigger data-target="#table-price-value" checked>
         </div>
         <label>Billed annually</label>
       </div>
@@ -452,16 +470,18 @@
             <div class="aximo-default-content">
               <h2>
                 <span class="aximo-title-animation">
-                Read our FAQ
-                <span class="aximo-title-icon">
-                  <img src="assets/images/v1/star2.png" alt="">
-                </span>
+                  Read our FAQ
+                  <span class="aximo-title-icon">
+                    <img src="assets/images/v1/star2.png" alt="">
+                  </span>
                 </span>
                 for clarification
               </h2>
-              <p>We understand that you considering our services, that's why we’ve curated a collection of frequently asked questions.</p>
+              <p>We understand that you considering our services, that's why we’ve curated a collection of frequently
+                asked questions.</p>
             </div>
-            <a class="aximo-errors-btn contact-us wow fadeInUpX" data-wow-delay="0.1s" href="contact-us.html">Contact us <span><img src="assets/images/icon/arrow-right.svg" alt=""></span></a>
+            <a class="aximo-errors-btn contact-us wow fadeInUpX" data-wow-delay="0.1s" href="contact-us.html">Contact us
+              <span><img src="assets/images/icon/arrow-right.svg" alt=""></span></a>
           </div>
           <div class="col-lg-6">
             <div class="aximo-accordion-normal-wrap m_top_responsive">
@@ -471,7 +491,8 @@
                 </div>
                 <div class="aximo-accordion-normal-data">
                   <h3>Can I buy multiple plans?</h3>
-                  <p>Yes, you can try us for free for 30 days. Our friendly team will work with you to get you up and running as soon as possible.</p>
+                  <p>Yes, you can try us for free for 30 days. Our friendly team will work with you to get you up and
+                    running as soon as possible.</p>
                 </div>
               </div>
               <div class="aximo-accordion-normal-item">
@@ -480,7 +501,8 @@
                 </div>
                 <div class="aximo-accordion-normal-data">
                   <h3>What is the cancelation policy?</h3>
-                  <p>The cancellation policy refers to the rules and guidelines established by a business regarding the cancellation of services, products.</p>
+                  <p>The cancellation policy refers to the rules and guidelines established by a business regarding the
+                    cancellation of services, products.</p>
                 </div>
               </div>
               <div class="aximo-accordion-normal-item">
@@ -489,7 +511,8 @@
                 </div>
                 <div class="aximo-accordion-normal-data">
                   <h3>How much does design work cost?</h3>
-                  <p>The cost of our design services varies depending on the scope of the project. We provide customized quotes after discussing requirements.</p>
+                  <p>The cost of our design services varies depending on the scope of the project. We provide customized
+                    quotes after discussing requirements.</p>
                 </div>
               </div>
             </div>
@@ -508,10 +531,10 @@
         <h2>
           Clients are always
           <span class="aximo-title-animation">
-          satisfied with us
-          <span class="aximo-title-icon">
-            <img src="assets/images/v1/star2.png" alt="">
-          </span>
+            satisfied with us
+            <span class="aximo-title-icon">
+              <img src="assets/images/v1/star2.png" alt="">
+            </span>
           </span>
         </h2>
       </div>
@@ -529,7 +552,9 @@
             </div>
             <div class="aximo-testimonial-data">
               <h3>Super customer service!</h3>
-              <p>Excellent customer service and I was really impressed and happy with my purchase especially as it was a last minute order which got to me in time, and when it arrived I was very happy with the design and size and so was the recipient.</p>
+              <p>Excellent customer service and I was really impressed and happy with my purchase especially as it was a
+                last minute order which got to me in time, and when it arrived I was very happy with the design and size
+                and so was the recipient.</p>
             </div>
             <div class="aximo-testimonial-author">
               <div class="aximo-testimonial-author-thumb">
@@ -554,7 +579,9 @@
             </div>
             <div class="aximo-testimonial-data">
               <h3>Exceptional creativity and vision</h3>
-              <p>Working Mthemeus was a game-changer for our brand. Their exceptional creativity & vision breathed new life into our visual. The logo they perfectly captures our essence & has become instantly recognizable. We couldn't be happier the results!</p>
+              <p>Working Mthemeus was a game-changer for our brand. Their exceptional creativity & vision breathed new
+                life into our visual. The logo they perfectly captures our essence & has become instantly recognizable.
+                We couldn't be happier the results!</p>
             </div>
             <div class="aximo-testimonial-author">
               <div class="aximo-testimonial-author-thumb">
@@ -579,7 +606,9 @@
             </div>
             <div class="aximo-testimonial-data">
               <h3>Innovative and professional</h3>
-              <p>I can't say enough good things about them. Their team is not only incredibly talented but also highly professional. They listened to our ideas and brought to life in ways we couldn't have imagined. Their innovative approach and dedication to our project.</p>
+              <p>I can't say enough good things about them. Their team is not only incredibly talented but also highly
+                professional. They listened to our ideas and brought to life in ways we couldn't have imagined. Their
+                innovative approach and dedication to our project.</p>
             </div>
             <div class="aximo-testimonial-author">
               <div class="aximo-testimonial-author-thumb">
@@ -604,7 +633,9 @@
             </div>
             <div class="aximo-testimonial-data">
               <h3>Transformed our brand</h3>
-              <p>Our partnership with Mthemeus transformed our brand from ordinary to extraordinary. Their branding expertise and design work elevated our marketing materials to a whole new level. Our customers have taken notice, and boost in brand recognition.</p>
+              <p>Our partnership with Mthemeus transformed our brand from ordinary to extraordinary. Their branding
+                expertise and design work elevated our marketing materials to a whole new level. Our customers have
+                taken notice, and boost in brand recognition.</p>
             </div>
             <div class="aximo-testimonial-author">
               <div class="aximo-testimonial-author-thumb">
@@ -635,14 +666,15 @@
             <div class="aximo-default-content light position-relative">
               <h2>
                 <span class="aximo-title-animation">
-                  Let's start a 
+                  Let's start a
                   <span class="aximo-title-icon">
                     <img src="assets/images/v1/star2.png" alt="">
                   </span>
                 </span>
                 project together
               </h2>
-              <p>We work closely with our clients to understand their objectives, target audience, and unique needs. We use our creative skills to translate these requirements and practical design solutions.</p>
+              <p>We work closely with our clients to understand their objectives, target audience, and unique needs. We
+                use our creative skills to translate these requirements and practical design solutions.</p>
               <div class="aximo-info-wrap">
                 <div class="aximo-info">
                   <ul>
@@ -702,7 +734,8 @@
                 <div class="aximo-form-field">
                   <textarea name="textarea" placeholder="Write your message here..."></textarea>
                 </div>
-                <button id="aximo-submit-btn" type="submit">Send message <span><img src="assets/images/icon/arrow-right3.svg" alt=""></span></button>
+                <button id="aximo-submit-btn" type="submit">Send message <span><img
+                      src="assets/images/icon/arrow-right3.svg" alt=""></span></button>
               </form>
             </div>
           </div>
@@ -713,20 +746,20 @@
           <div class="col-lg-6">
             <div class="aximo-footer-logo">
               <a href="">
-                <img src="assets/images/logo/logo-white.svg" alt="">
+                <img class="footerImage" src="assets/logo_tb.png"" alt="">
               </a>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="aximo-copywright one">
-              <p> &copy; Copyright 2023, All Rights Reserved by Mthemeus</p>
+          <div class=" col-lg-6">
+                <div class="aximo-copywright one">
+                  <p> &copy; Copyright 2023, All Rights Reserved by Mthemeus</p>
+                </div>
             </div>
           </div>
+
         </div>
 
       </div>
-
-    </div>
   </footer>
 
 
@@ -756,4 +789,5 @@
 
 
 </body>
+
 </html>
