--- a/single-team.html
+++ b/single-team.html
@@ -7,8 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Bucket | Creative Media Agency</title>
 
-  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <!--- End favicon-->
 
   <link
@@ -33,6 +38,16 @@
 
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/app.min.css">
+  <style>
+    .footerImage {
+      width: 25%;
+
+      @media (min-width: 200px) and (max-width: 767px) {
+        width: 50%;
+      }
+
+    }
+  </style>
 </head>
 
 <body class="light">
@@ -55,7 +70,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="index.html">
-            <img src="assets/images/logo/logo-white.svg" alt="" class="light-version-logo">
+            <img src="assets/logo_tb.png" alt="" class="light-version-logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
@@ -73,16 +88,16 @@
                 <a href="/index.html" class="nav-link-item">Home</a>
               </li>
               <li class="nav-item">
-                <a href="portfolio.html" target="_blank" class="nav-link-item">Portfolio</a>
+                <a href="portfolio.html" class="nav-link-item">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a href="/team.html" target="_blank" class="nav-link-item">Our Team</a>
+                <a href="/about-us.html" class="nav-link-item">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="/service.html" target="_blank" class="nav-link-item">Services</a>
+                <a href="/service.html" class="nav-link-item">Services</a>
               </li>
               <li class="nav-item">
-                <a href="/contact-us.html" target="_blank" class="nav-link-item">Contact Us</a>
+                <a href="/contact-us.html" class="nav-link-item">Contact Us</a>
               </li>
             </ul>
           </nav>
@@ -286,7 +301,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://facebook.com/page/techbucket" target="_blank">
+                    <a href="https://www.facebook.com/techbucket.ca/" target="_blank">
                       <i class="fa-brands fa-facebook-f"></i>
                     </a>
                   </li>
@@ -296,7 +311,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.tiktok.com/techbucket" target="_blank">
+                    <a href="https://www.tiktok.com/@techbucket.ca" target="_blank">
                       <i class="fa-brands fa-tiktok"></i>
                     </a>
                   </li>
@@ -336,20 +351,20 @@
           <div class="col-lg-6">
             <div class="aximo-footer-logo">
               <a href="">
-                <img src="assets/images/logo/logo-white.svg" alt="">
+                <img class="footerImage" src="assets/logo_tb.png"" alt="">
               </a>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="aximo-copywright one">
-              <p> &copy; Copyright 2024, All Rights Reserved | Tech Bucket</p>
+          <div class=" col-lg-6">
+                <div class="aximo-copywright one">
+                  <p> &copy; Copyright 2024, All Rights Reserved | Tech Bucket</p>
+                </div>
             </div>
           </div>
+
         </div>
 
       </div>
-
-    </div>
   </footer>
 
 
